--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div>L'email è in lista? <span id="mail"></span></div>
+  <div id="game"></div>
 
   <script src="js/script.js"></script>
 </body>
