--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div>L'email è in lista? <span id="mail"></span></div>
+  <div id="mail"></div>
   <div id="game"></div>
 
   <script src="js/script.js"></script>
